fixed btn z-index

--- a/src/components/Numbers/Table.css
+++ b/src/components/Numbers/Table.css
@@ -58,7 +58,7 @@
 .again {
     opacity: 0.8;
     position: absolute;
-    z-index: 2;
+    z-index: 10;
     animation: fadeIn08 2.5s;
     display: flex;
     justify-content: center;
